--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ p {
 .container {
   margin-left: auto;
   margin-right: auto;
-  /* outline: 1px solid green; */
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -129,11 +128,8 @@ p {
   padding-top: 200px;
   padding-bottom: 200px;
   margin-top: 0;
-  /* position: absolute; */
   max-width: 1600px;
   min-height: 600px;
-  /* left: 0px;
-  top: 80px; */
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -164,6 +160,54 @@ p {
   width: 696px;
   left: 452px;
   top: 280px;
+}
+/* MODALKA */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  display: none;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  /* центрируем модалку */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-close {
+  position: fixed;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mod-icon {
+  align-items: center;
+  width: 18px;
+  height: 18px;
+  fill: #212121;
 }
 /*___ BOOtON ___*/
 
@@ -301,21 +345,20 @@ p {
   overflow: hidden;
   margin: 0;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 .desc-do {
-  margin: 0;
-  padding: 0;
   display: flex;
-  position: absolute;
-  bottom: 0;
-
-  /* bottom: 4px; */
-  right: 0;
-  
-  height: 70px;
-  width: 100%;
-  overflow: hidden;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 70px;
+  width: 100%;
   font-size: 14px;
   line-height: 1.14;
   text-align: center;
@@ -433,12 +476,18 @@ p {
   margin-right: 30px;
   margin-bottom: 30px;
 }
+
 .p-item:hover,
 .p-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
 }
+.p-item:hover .overlay,
+.p-item:focus .overlay {
+  transform: translatey(0);
+}
+
 .portfolio .p-item:nth-child(3n) {
   margin-right: 0;
 }
@@ -448,6 +497,30 @@ p {
 .specific {
   padding: 20px 24px;
   outline: 1px solid #eeeeee;
+}
+.popup {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  transform: translatey(0);
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 370px;
+  height: 294px;
+  transform: translatey(100%);
+  transition: transform 250ms ease;
+
+  margin: 0;
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: left;
+  color: #ffffff;
+  background: rgba(33, 150, 243, 0.9);
 }
 .title-portfo {
   padding-bottom: 4px;
