--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ p {
 .backdrop.is-hidden {
   display: none;
   opacity: 0;
+  visibility: collapse;
   pointer-events: none;
 }
 .modal {
@@ -537,7 +538,7 @@ img {
   width: 370px;
   height: 294px;
   transform: translatey(100%);
-  transition: transform 250ms ease;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   margin: 0;
   padding: 63px 24px;
