--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ p {
   font-size: 14px;
   line-height: 1.14;
   text-decoration: none;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-contact {
   display: flex;
@@ -92,7 +93,7 @@ p {
 .link:hover,
 .link:focus {
   color: var(--booton-color);
-}
+  }
 .link.current {
   color: var(--booton-color);
 }
@@ -103,7 +104,7 @@ p {
   width: 100%;
   height: 48px;
   margin-top: 32px;
-  }
+}
 
 .link.current::after {
   position: absolute;
@@ -113,10 +114,8 @@ p {
   height: 4px;
   background-color: var(--booton-color);
   border-radius: 2px;
-  }
-/* .link:hover::after {
-  display: block;
-} */
+}
+
 .link::after {
   display: block;
 }
@@ -129,10 +128,10 @@ p {
   width: 16px;
   height: 16px;
   background-size: contain;
+  /* transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .contacts {
   display: flex;
-  /* margin-left: 10px; */
   color: var(--texst-color);
 }
 .contacts:hover,
@@ -252,6 +251,7 @@ p {
   min-width: 200px;
   border-radius: 4px;
   border: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-hero:hover,
 .button-hero:focus {
@@ -280,6 +280,7 @@ p {
   text-align: center;
   border-radius: 4px;
   border: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-portfo:hover,
 .button-portfo:focus {
@@ -288,7 +289,7 @@ p {
   cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+ }
 
 /*___section____ */
 
@@ -443,6 +444,7 @@ img {
   height: 44px;
   color: rgba(175, 177, 184, 1);
   border-radius: 50%;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials:hover,
 .socials:focus {
@@ -477,6 +479,7 @@ img {
   justify-content: center;
   background-size: contain;
   color: #afb1b8;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icons-client:hover,
 .icons-client:focus {
@@ -501,6 +504,7 @@ img {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  transition: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .p-item:hover,
@@ -528,9 +532,9 @@ img {
   position: relative;
   overflow: hidden;
 }
-.overlay {
+/* .overlay {
   transform: translatey(0);
-}
+  } */
 .overlay {
   position: absolute;
   top: 0;
@@ -538,7 +542,7 @@ img {
   width: 370px;
   height: 294px;
   transform: translatey(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   margin: 0;
   padding: 63px 24px;
@@ -598,6 +602,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   text-decoration: none;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contacts > pre {
@@ -606,7 +611,7 @@ img {
 .footer-contacts:hover,
 .footer-contacts:focus {
   color: var(--booton-color);
-}
+ }
 
 /* social-footer */
 .subtitle-social {
@@ -623,7 +628,7 @@ img {
   margin-left: 70px;
   width: 206px;
   flex-direction: column;
-}
+ }
 .social-icons-footer {
   justify-content: space-between;
 }
