--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ p {
   pointer-events: none;
 }
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0, 5);
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .modal {
