--- a/css/style.css
+++ b/css/style.css
@@ -197,9 +197,9 @@ p {
   transition: opacity 250ms var(--timing-fuction);
 }
 .backdrop.is-hidden {
-  /* display: none; */
+  display: none;
   opacity: 0;
-  /* visibility: collapse; */
+  visibility: collapse;
   pointer-events: none;
 }
 .backdrop.is-hidden .modal {
